Spacing fix
-Added more meta
-Changes spacing between sections

--- a/css/mediastyles.css
+++ b/css/mediastyles.css
@@ -110,7 +110,9 @@
 
 @media screen and (max-width: 760px) {
   section {
-    margin: 3vw 0 3rem 0;
+    margin-bottom: 5vh;
+    padding-top: 10vh;
+    height: fit-content;
   }
   nav {
     height: 10vh;
